--- a/app/globals.css
+++ b/app/globals.css
@@ -71,3 +71,18 @@ pre {
   background-color: #e4e4e4;
   color: black;
 }
+
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;
+    line-height: 1.4;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+  }
+
+  p, button {
+    font-size: 14px;
+  }
+}
