--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,6 @@
+/* global.css */
+
+/* Root-level custom properties */
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -6,6 +9,7 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 }
 
+/* Reset / base rules */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -19,10 +23,8 @@ html {
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
   color: rgb(var(--foreground-rgb));
+  /* You can set any default body color, background, etc. here */
 }
 
 a {
